--- a/index.html
+++ b/index.html
@@ -13,15 +13,71 @@
       <img src="./resources/images/logo.png" alt="logo Tea Cozy"/>
       <nav>
         <span><a href="#mission">Mission</a></span>
-        <span><a href="#featured-tea">Featured Tea</a></span>
+        <span><a href="#tea">Featured Tea</a></span>
         <span><a href="#locations">Locations</a></span>
       </nav>
-      
     </header>
 
+    <!-- Main container -->
+    <div class="container">
 
+      <!-- Mission section -->
+      <div id="mission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
 
+      <!-- Featured Tea section -->
+      <div id="tea">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <!-- selection of the month -->
+        <div class="selection">
+          <img src="./resources/images/img-berryblitz.jpg"/><h4>Fall Berry Blitz Tea</h4>
+          <img src="./resources/images/img-spiced-rum.jpg"/><h4>Spiced Rum Tea</h4>
+          <img src="./resources/images/img-donut.jpg"/><h4>Seasonal Donuts</h4>
+          <img src="./resources/images/img-myrtle-ave.jpg"/><h4>Myrtle Ave Tea</h4>
+          <img src="./resources/images/img-bedford-bizarre.jpg"/><h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
 
+      <!-- Locations section -->
+      <div id="locations">
+        <h2>Locations</h2>
+        <!-- Three shops -->
+        <div class="shops">
+          <div class="downtown">
+            <h3>Downtown</h3>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+          <div class="east-bayside">
+            <h3>East Bayside</h3>
+            <h4>3433 Phisherman's Avenue</h4>
+            <h4>(Northwest Corner)</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+          <div class="oakdale">
+            <h3>Oakdale</h3>
+            <h4>515 Crescent Avenue</h4>
+            <h4>Second Floor</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <h5 id="copyright">copyright The Tea Cozy 2017</h5>
+    </footer>
 
   </body>
 </html>
