--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
       <!-- Mission section -->
       <div id="mission">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        <div class="textbox-mission">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
 
       <!-- Featured Tea section -->
