Added featured tea section

--- a/index.html
+++ b/index.html
@@ -35,11 +35,31 @@
         <h4>What's Steeping at The Tea Cozy?</h4>
         <!-- selection of the month -->
         <div class="selection">
-          <img src="./resources/images/img-berryblitz.jpg"/><h4>Fall Berry Blitz Tea</h4>
-          <img src="./resources/images/img-spiced-rum.jpg"/><h4>Spiced Rum Tea</h4>
-          <img src="./resources/images/img-donut.jpg"/><h4>Seasonal Donuts</h4>
-          <img src="./resources/images/img-myrtle-ave.jpg"/><h4>Myrtle Ave Tea</h4>
-          <img src="./resources/images/img-bedford-bizarre.jpg"/><h4>Bedford Bizarre Tea</h4>
+          <!-- berry blitz -->
+          <div class="selection-box">
+            <img src="./resources/images/img-berryblitz.jpg"/>
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <!-- spiced rum -->
+          <div class="selection-box">
+            <img src="./resources/images/img-spiced-rum.jpg"/>
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <!-- seasonal donuts -->
+          <div class="selection-box">
+            <img src="./resources/images/img-donut.jpg"/>
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <!-- myrtle ave tea -->
+          <div class="selection-box">
+            <img src="./resources/images/img-myrtle-ave.jpg"/>
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <!-- bedford bizarre tea -->
+          <div class="selection-box">
+            <img src="./resources/images/img-bedford-bizarre.jpg"/>
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
         </div>
       </div>
 
