--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
       <!-- Locations section -->
       <div id="locations">
         <h2>Locations</h2>
-        <!-- Three shops -->
+        <!-- 3 shops -->
         <div class="shops">
-          <div class="downtown">
+          <div class="shop-box">
             <h3>Downtown</h3>
             <h4>384 West 4th St</h4>
             <h4>Suite 108</h4>
             <h4>Portland, Maine</h4>
           </div>
-          <div class="east-bayside">
+          <div class="shop-box">
             <h3>East Bayside</h3>
             <h4>3433 Phisherman's Avenue</h4>
             <h4>(Northwest Corner)</h4>
             <h4>Portland, Maine</h4>
           </div>
-          <div class="oakdale">
+          <div class="shop-box">
             <h3>Oakdale</h3>
             <h4>515 Crescent Avenue</h4>
             <h4>Second Floor</h4>
