--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
       </div>
-      <h5 id="copyright">copyright The Tea Cozy 2017</h5>
+      <h5 id="copyright">&copy The Tea Cozy 2017</h5>
     </footer>
 
   </body>
